# My-own-world

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.mjs  presentation.html
docs/: AI_ONBOARDING.md  ARCHIVED_EXPERIMENTS.md  ASSET_LIFECYCLE_CONTRACT.md  BACKEND_STORAGE_API_PLAN.md  BACKUP_AND_RECOVERY_CONTRACT.md  BLOCK_SYSTEM_CONTRACT.md  CAMPAIGN_MAP_PERFORMANCE_STRATEGY.md  CLOUD_THREAT_MODEL.md  DESKTOP_ADAPTER_PLAN.md  DESKTOP_BACKUP_RESTORE_GATE.md  DESKTOP_MAP_PERFORMANCE_NOTES.md  DESKTOP_PACKAGING_SMOKE.md  DESKTOP_PRESENTATION_WINDOW_SPIKE.md  DESKTOP_PROTOTYPE_SMOKE.md  DESKTOP_RELEASE_POLICY.md  DESKTOP_TRANSITION_STRATEGY.md  EDITOR_HISTORY_CONTRACT.md  FORMATTING_SERVICE_CONTRACT.md  KNOWLEDGE_GRAPH_MODEL.md  MY_OWN_WORLD_FULL_MANUAL.docx  PAGE_REPOSITORY_CONTRACT.md  PLANS_AND_TECH_DEBT.md  POPUP_LIFECYCLE_CONTRACT.md  PROJECT_DEVELOPMENT_AND_MATURITY_PLAN.md  PROJECT_FILE_AUDIT.md  PROJECT_PLAN.md  PROJECT_STRATEGY_PRESENTATION.html  PROPERTIES_MODEL_CONTRACT.md  README.md  RELEASE_PROCESS.md  SAFE_HTML_CONTRACT.md  SMOKE_TESTS.md  TABLES_CONTRACT.md  UX_ONBOARDING_CHECKLIST.md  VISUAL_REGRESSION_CHECKLIST.md  WORKSPACE_SCHEMA_CONTRACT.md  WORK_LOG.md  Новые идеи к адаптации.txt
js/: app.js  state.js  stateActions.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
styles/: app-topbar.css  backlinks.css  block-character-effects.css  block-character-sheet.css  block-character-stats.css  block-dnd-stats.css  (+46 more)
(+459 files in other folders)
